<resources>
    <string name="app_name">Doval Fraga Jose Angel , Dis Fruta Frutería store</string>
    <string name="login_usuario_lbl">"Usuario:"</string>
    <string name="login_contrasena_lbl">"Contraseña:"</string>
    <string name="cont_tienda">"Tienda"</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="factura">Factura</string>
    <string name="aguacate_info">Información: \n Es considerado uno de los alimentos mas saludables del mundo</string>
    <string name="menos">-</string>
    <string name="mas">+</string>
    <string name="nombre_aguacate">Nombre: Aguacate</string>
    <string name="productos">Productos</string>
    <string name="cero">0</string>
    <string name="chirimoya_nombre">Nombre: Chirimoya</string>
    <string name="chirimoya_info">Información: \n Esta fruta tropical es considerada una fuente de beneficios esenciales para la salud</string>
    <string name="caqui">Nombre: Caqui</string>
    <string name="caqui_info">Información: \n Se caracteriza por su pulpa dura, su consistencia firme, de color naranja y su sabor dulce</string>
    <string name="nombre_granada">Nombre: Granada</string>
    <string name="granada_info">Información: \n Es una de las frutas con mayor poder antioxidante y más beneficios para la salud del mercado</string>
    <string name="nombre_pitahaya">Nombre: Pitahaya</string>
    <string name="pitahaya_info">Información;\n También conocida como la fruta del dragón, se caracteriza por su llamativo aspeto, interior dulce y sus muchos beneficios para la salud</string>
    <string name="salir">Salir</string>
    <string name="realizar_compra">Realizar Compra</string>
    <string name="datos_envio">Datos Envio</string>
    <string name="precio">Precio:</string>
    <string name="nombre_usuario">Nombre:</string>
    <string name="ir_al_registro">Ir al Registro</string>
    <string name="siguiente">Siguiente</string>
    <string name="introduce_tu_direcci_n">Introduce tu dirección</string>
    <string name="n_de_vivienda">Nº de vivienda</string>
    <string name="introduce_el_n_de_tu_vivienda">Introduce el Nº de tu vivienda</string>
    <string name="c_digo_postal">Código Postal</string>
    <string name="introduce_tu_c_digo_postal">Introduce tu código postal</string>
    <string name="numero_de_tel_fono">Numero de Teléfono</string>
    <string name="introduce_tu_n_mero_de_telefono">Introduce tu número de telefono</string>
    <string name="registrarse">Registrarse</string>
    <string name="espa_a">España</string>
    <string name="pais">Pais</string>
    <string name="provincia">Provincia</string>
    <string name="direcci_n">Dirección</string>
    <string name="introduce_contrase_a">Introduce contraseña</string>
    <string name="introduce_nombre_de_usuario">Introduce nombre de usuario</string>
    <string name="introduce_tu_nombre">Introduce tu nombre</string>
    <string name="n_vivienda_opcional">Nº vivienda (opcional)</string>
    <string name="datos_del_cliente">Datos del Cliente:</string>
    <string name="datos_del_pedido">Datos del Pedido:</string>
    <string name="volver_a_comprar">Volver a comprar</string>
    <string name="nombre">Nombre:</string>
    <string name="direcci_n2">Dirección:</string>
    <string name="provincia2">Provincia:</string>
    <string name="pais2">Pais:</string>
    <string name="tel_fono2">Teléfono:</string>
    <string name="total_importe_factura">Total Importe Factura:</string>
    <string name="_3_75">3,75€</string>
    <string name="_2_85">2,85€</string>
    <string name="_1_25">1,25€</string>
    <string name="_1_65">1,65€</string>
    <string name="_4_05">4,05€</string>
</resources>