<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".loginActivity"
        android:background="@color/ColorRojoFondo">

        <ImageView
            android:id="@+id/logo_login_imageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:srcCompat="@drawable/logo"
            android:layout_marginBottom="50dp"
            />

        <TextView
            android:id="@+id/login_Lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_below="@id/logo_login_imageView"
            android:textColor="@color/cardview_light_background"
            android:fontFamily="@font/galdeano"
            android:text="@string/login_usuario_lbl"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="PrivateResource" />

        <EditText
            android:id="@+id/login_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ellipsize="start"
            android:gravity="center_horizontal"
            android:hint="@string/introduce_nombre_de_usuario"
            android:ems="15"
            android:inputType="textCapWords|textPersonName"
            android:singleLine="true"
            android:layout_below="@id/login_Lbl"
            />


        <TextView
            android:id="@+id/contrasena_Lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_below="@id/login_editText"
            android:fontFamily="@font/galdeano"
            android:textColor="@color/cardview_light_background"
            android:text="@string/login_contrasena_lbl"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="PrivateResource" />

        <EditText
            android:id="@+id/contrasena_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/contrasena_Lbl"
            android:layout_centerInParent="true"
            android:ellipsize="start"
            android:ems="15"
            android:gravity="center_horizontal"
            android:hint="@string/introduce_contrase_a"
            android:imeOptions="actionSend"
            android:onClick="iniciarSesion_Click"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/iniciarSesion_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/contrasena_editText"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/galdeano"
            android:onClick="iniciarSesion_Click"
            android:text="@string/iniciar_sesi_n"
            android:textColor="@color/cardview_light_background"
            tools:ignore="PrivateResource" />

        <Button
            android:id="@+id/IraRegistrarUsuario_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ir_al_registro"
            android:textColor="@color/cardview_light_background"
            android:layout_below="@id/contrasena_editText"
            android:layout_margin="25dp"
            android:layout_alignParentStart="true"
            android:fontFamily="@font/galdeano"
            tools:ignore="PrivateResource"
            android:onClick="IraRegistrarUsuario_Click"
            />
    </RelativeLayout>

</ScrollView>
