<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="factura"
            type="com.example.disfruta.Factura" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".FacturaActivity"
            android:background="@color/ColorRojoFondo"
            android:orientation="vertical"
            >
<!-- Cabezera -->
            <RelativeLayout
                android:id="@+id/contenedorFactura_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/NegroSemiTransparente"
                >
                <TextView
                    android:id="@+id/cabezera_Factura_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@color/ColorRojoFondo"
                    android:text="@string/factura"
                    android:fontFamily="@font/galdeano"
                    android:textSize="50sp"
                    android:textColor="@color/cardview_light_background"
                    android:layout_centerInParent="true"
                    tools:ignore="PrivateResource" />
                <ImageView
                    android:id="@+id/logo_contenedorFactura_layout"
                    android:layout_width="105dp"
                    android:layout_height="105dp"
                    app:srcCompat="@drawable/logo"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
<!-- Fin Cabezera -->

<!-- Datos Cliente -->
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:orientation="vertical"
                android:stretchColumns="1,3"
                >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBlanco"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/datos_del_cliente"
                        android:background="@color/colorBlanco"
                        android:textColor="@color/colorNegro"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:layout_span="2"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="@color/colorBlanco"
                        android:textColor="@color/colorNegro"
                        android:text="@string/nombre"
                        android:textSize="12sp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="@color/colorBlanco"
                        android:textColor="@color/colorNegro"
                        android:textSize="12sp"
                        android:text="@{factura.getNombre()}"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="@color/colorBlanco"
                        android:textColor="@color/colorNegro"
                        android:text="@string/direcci_n2"
                        android:textSize="12sp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="@color/colorBlanco"
                        android:textColor="@color/colorNegro"
                        android:textSize="12sp"
                        android:text="@{factura.getDireccion()}"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="@color/colorBlanco"
                        android:textColor="@color/colorNegro"
                        android:text="@string/provincia2"
                        android:textSize="12sp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="@color/colorBlanco"
                        android:textColor="@color/colorNegro"
                        android:textSize="12sp"
                        android:text="@{factura.getProvincia()}"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="@color/colorBlanco"
                        android:textColor="@color/colorNegro"
                        android:text="@string/pais2"
                        android:textSize="12sp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="@color/colorBlanco"
                        android:textColor="@color/colorNegro"
                        android:textSize="12sp"
                        android:text="@{factura.getPais()}"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="@color/colorBlanco"
                        android:textColor="@color/colorNegro"
                        android:text="@string/tel_fono2"
                        android:textSize="12sp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="@color/colorBlanco"
                        android:textColor="@color/colorNegro"
                        android:textSize="12sp"
                        android:text="@{factura.getStringTelefono()}"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBlanco"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/datos_del_pedido"
                        android:background="@color/colorBlanco"
                        android:textColor="@color/colorNegro"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:layout_span="2"/>
                </TableRow>
            </TableLayout>
<!-- Fin Datos Cliente -->

<!-- Datos Pedido -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ContendedorPadre"
                tools:context=".FacturaActivity"
                android:background="@color/ColorRojoFondo"
                android:orientation="vertical"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
            </LinearLayout>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:orientation="vertical"
                android:stretchColumns="1,3"
                >
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="@color/colorBlanco"
                        android:textColor="@color/colorNegro"
                        android:text="@string/total_importe_factura"
                        android:textSize="12sp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="@color/colorBlanco"
                        android:textColor="@color/colorNegro"
                        android:textSize="12sp"
                        android:text="@{factura.getStringPrecioTotal()}"/>
                </TableRow>
            </TableLayout>
 <!-- Datos Pedido -->

<!-- Botonera -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/Salir_app_Btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salir"
                    android:textColor="@color/cardview_light_background"
                    android:layout_margin="25dp"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/galdeano"
                    tools:ignore="PrivateResource"
                    android:onClick="SalirOnClick"
                    />
                <Button
                    android:id="@+id/NuevaCompra_Btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/volver_a_comprar"
                    android:textColor="@color/cardview_light_background"
                    android:layout_margin="25dp"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/galdeano"
                    tools:ignore="PrivateResource"
                    android:onClick="VolverComprarOnClick"/>
            </RelativeLayout>
<!-- Fin Botonera -->

        </LinearLayout>
    </ScrollView>
</layout>